Fix search icon 1px cut off when user increases browser text size aka the definition of an edge case

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
@@ -346,6 +346,8 @@
 			margin-left: 20px;
 			height: 30px;
 			width: 30px;
+			min-height: fit-content;
+			min-width: fit-content;
 			@media (min-width: 1250px) {
 				margin-left: 40px;
 			}
